--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,11 @@
   "author": "Ngima Gelu Sherpa",
   "action": {
     "default_title": "Data to Table",
-    "default_popup": "index.html"
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "assets/16x.jpg",
+      "48": "assets/48x.jpg",
+      "128": "assets/128x.jpg"
+    }
   }
 }
